@@ -16,35 +16,10 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-/*
- * This file describes N_TTY line discipline of tty.
- */
+#ifndef _ASM_GENERIC_BITOPS_H_
+#define _ASM_GENERIC_BITOPS_H_
 
-#include <sandix/kernel.h>
-#include <sandix/types.h>
-#include <sandix/tty.h>
+#include <asm-generic/bitops/ffs.h>
+#include <asm-generic/bitops/ffz.h>
 
-static ssize_t n_tty_read(struct tty_struct *tty, char __user *buf,
-			  size_t count)
-{
-
-}
-
-static ssize_t n_tty_write(struct tty_struct *tty,
-			   const unsigned char __user *buf, size_t count)
-{
-	
-}
-
-static void n_tty_set_termios(struct tty_struct *tty, struct termios *old)
-{
-
-}
-
-const struct tty_ldisc_ops tty_ldisc_N_TTY = {
-	.name		= "n_tty",
-	.read		= n_tty_read,
-	.write		= n_tty_write,
-	.set_termios	= n_tty_set_termios
-};
-EXPORT_SYMBOL(tty_ldisc_N_TTY);
+#endif /* _ASM_GENERIC_BITOPS_H_ */
