@@ -232,3 +232,8 @@ Fri Oct  9 CST 2015
 
 Sat Oct 10 CST 2015
 - [+] drivers/tty/n_dummy.c
+
+
+Tue Oct 13 CST 2015
+- [+] Diary/10-13-2015				[D] These days i am debugging uncore PMU
+-						 >  Wait a couple days, i will be back!
